framework/scss/components/_forms.scss
/* ... */
input[type=radio],
.ds44-radio {
    position: absolute;
    left: -9999px;

    &:focus + .ds44-radioLabel::before {
        outline: 1px dotted $ds44-dark;
    }

    &:checked + .ds44-radioLabel::after {
        opacity: 1;
    }

    &.ds44-boxError + .ds44-radioLabel::before {
        border-color: $ds44-error;
        background-color: $ds44-light-color;
    }
}



/**
 * Moteurs de recherche à facettes
 */

.ds44-facetteContainer {
     padding: $ds44-padding-large;
     position: relative;
}

.ds44-fieldContainer {
     margin-right: $ds44-margin-base;
     position: relative;

     &:last-child {
         margin-right: 0;
     }

     .ds44-form__container {
         margin: 0;
     }
}

.ds44-labelStd {
     font-size: 1.4rem;
}

.ds44-labelLarge {
     font-size: 1.6rem;
     line-height: 1rem;
}


/**
 * SELECTS
 */

.ds44-listSelect { // faux champ de formulaire, conteneur pour les listes de sélection
    background-color: $ds44-light-color;
    padding: $ds44-padding-large;
    padding-bottom: 0;
}

.ds44-select__shape {
    cursor: pointer;
    background-color: $ds44-light-color;

    &.ds44-boxError {
        border-color: $ds44-error;
    }

    &.ds44-error {
        .ds44-btnIco .icon {
            color: $ds44-error;
        }
    }
}

.ds44-selectValue {
    @include ds44-font-sizes(largeButton);
    position: absolute;
}

.ds44-selectLabel {
    cursor: pointer;
    @include ds44-font-sizes(largeButton);
    color: $ds44-color-soft-text;
    font-weight: normal;
    margin-bottom: 0;
}

.ds44-moveSelectLabel {
    font-size: 1.3rem; // 13px
    position: absolute;
    top: -$ds44-padding-medium*2;
    left: 0;
    color: $ds44-dark;

    .ds44-bgDark & {
        color: $ds44-color-inverse;
    }
}

.ds44-select-container {
    position: absolute;
    width: 100%;
    box-shadow: $ds44-boxShadow;
    background-color: $ds44-light-color;
    z-index: 10;
}

.ds44-select-list_elem {
    margin-bottom: $ds44-large-vmargin/2;

    &:focus,
    &:hover,
    &:active {
      cursor: pointer;
    }

    label {
        @include ds44-font-sizes(formListElem);
        display: block;
        color: $ds44-color-dark-text;

        &:hover,
        &:focus,
        &:active {
            cursor: pointer;
            text-decoration: none;
        }
    }

    .ds44-form__container {
        margin: 0;
    }
}

.ds44-utile-list_elem {
    margin-bottom: $ds44-large-vmargin/2;

    label {
        display: block;
        color: $ds44-color-dark-text;
        @include ds44-font-sizes(bodySize);

        &:hover,
        &:focus,
        &:active {
            cursor: pointer;
            text-decoration: none;
        }
    }

    .ds44-form__container {
        margin: 0;
    }
}


/* multilevel selects */

.ds44-select__categ {

    position: relative;
    padding: 0 $ds44-padding-large;

    label {
        @include ds44-font-sizes(formListElem);
        color: $ds44-color-dark-text;
        min-width: calc(100% - 4.5rem);
        cursor: pointer;
    }

    .ds44-form__container {
        margin-bottom: 0;
        margin-top: 0;
    }
}

/* surcharge du collapser */

.ds44-collapser--select {
    position: relative;
    margin-bottom: $ds44-large-vmargin;

    .ds44-select-list_elem {

        label {
            @include ds44-font-sizes(largeButton);
        }

        &:last-child {
            margin-bottom: 0;
        }
    }

    .ds44-collapser_content--level2 {
        padding-left: $ds44-container-vmargin!important;
    }
}

/* surcharge du bouton du collapser */
.ds44-collapser_button--select {
    position: absolute;
    right: $ds44-padding-medium;
    top: -5px;
    width: 2rem;

    .ds44-noLineH::before {
        line-height: 0!important;
    }
}

/**
 * Autocompletion fields
 */

.ds44-autocomp-container {
    padding: $ds44-padding-medium;
    box-shadow: $ds44-boxShadow;
    background-color: $ds44-light-color;
    position: absolute;
    width: 100%;
    z-index: 10;
    color: $ds44-color-dark-text;
}

.ds44-autocomp-list {
    padding: $ds44-padding-medium $ds44-padding-large;
}

.ds44-autocomp-list_elem,
.ds44-autocomp-list_no_elem {
    @include ds44-font-sizes(formListElem);
    margin-bottom: $ds44-large-vmargin;

    &:focus,
    &:hover,
    &:active {
      text-decoration: underline;
      cursor: pointer;
    }

    label {
        display: block;

        &:hover,
        &:focus,
        &:active {
            cursor: pointer;
            text-decoration: none;
        }
    }
}

.ds44-autocomp-list_no_elem {
    &:focus,
    &:hover,
    &:active {
        text-decoration: none;
        cursor: default;
    }

    label {
        &:hover,
        &:focus,
        &:active {
            text-decoration: none;
            cursor: default;
        }
    }
}

// ellipsis
.ds44-selectDisplay {
    overflow: hidden;
    text-overflow: ellipsis;
    width: calc(100% - 40px);
    display: block;
    white-space: nowrap;
    color: $ds44-color-dark-text;
}


/**
* Error messages
*/


.ds44-error {
    border-color: $ds44-error;
}

.ds44-errorMsg-container {
    @include ds44-font-sizes(errMsg);
    background-color: $ds44-error-bg;
    padding: $ds44-padding-small $ds44-padding-box;

    .ds44-msgErrorText {
      margin: $ds44-paragraph-margin-bottom 0;
      color: $ds44-color-dark-text;
    }

    .icon {
        color: $ds44-error;
    }

    .ds44-iconInnerText{
      vertical-align: middle;
    }
}


 /**
  * Champs liés : Thèmes sous-thèmes, Lieu rayon, etc...
  */

.ds44-champsLies .ds44-inpStd,
.ds44-champsLies .ds44-inpLarge {
    &--first {
      border-radius: 3px 0 0 3px;
    }
}

.ds44-champsLies .ds44-inpStd,
.ds44-champsLies .ds44-inpLarge {
    &--last {
      border-radius: 0 3px 3px 0;
      margin-left: -1px;

      &.ds44-inputDisabled p{
        color: #666;
      }
    }
}

.ds44-inputDisabled {
  background: $ds44-lightgray ;
}

.ds44-inpStd  {
    & .ds44-btnIco {
      padding: 0.5rem 1.5rem ;
    }
}
/* ... */

